[package]
name = "roblox"
version = "0.1.0"
authors = ["AsianIntel <gautam.abhyankar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"